# pytorch-template

./: .env.example  Dockerfile  LICENSE  README.rst  environment.yml  requirements.txt  setup.cfg
src/zzsn2021/configs/hydra/hydra_logging/: rich.yaml
src/zzsn2021/configs/hydra/job_logging/: rich.yaml
